Revision history for CGI-Untaint-CountyStateProvince-US

0.05
	Added a work around for RT#105917

0.04	Mon Nov 23 08:38:22 EST 2020
	Fix http://www.cpantesters.org/cpan/report/a376e91c-b37f-11e7-bcf2-71d4db1c1d4b
	Fix RT#108877

0.03	Mon Oct 16 14:22:09 EDT 2017
	Bump minimum version of Locale::SubCountry to 1.47
	Corrected some variable names and the contact e-mail address.
	We don't need Test::Kwalitee to build

0.02	Fri Jun  8 09:28:23 EDT 2012
	use Locale::SubCountry instead of Locale::US.
	Check that two letter codes checks are case independant

0.01	Wed Apr 18 09:54:44 BST 2012
        First draft