@@ -8,6 +8,7 @@ MANIFEST.SKIP
 README
 README.md
 t/00-load.t
+t/30-basics.t
 t/boiler.t
 t/comment-spelling.t
 t/coverage.t
