@@ -65,3 +65,5 @@
 \.releaserc
 \.lwpcookies
 CGI-.*
+.test-script-*
+typescript
