@@ -21,7 +21,11 @@ our $VERSION = '0.04';
 
 =head1 SYNOPSIS
 
-Adds a list of U.S. states to the list of counties/state/provinces
+The module validates that a given input,
+represents a valid U.S. state.
+It supports both full state names (e.g., "Maryland") and two-letter state abbreviations (e.g., "MD").
+
+Adds a list of U.S. states to the list of counties/states/provinces
 which are known by the CGI::Untaint::CountyStateProvince validator allowing you
 to verify that a field in an HTML form contains a valid U.S. state.
 
@@ -39,11 +43,11 @@ CGI::Untaint, otherwise it won't work.
 
 =cut
 
-=head1 SUBSOUTINES/METHODS
+=head1 SUBROUTINES/METHODS
 
 =head2 is_valid
 
-Validates the data, setting the data to be the two letter abbreviation for the
+Validates the data, setting the data to be the two-letter abbreviation for the
 given state.  See CGI::Untaint::is_valid.
 
 =cut
@@ -78,7 +82,7 @@ sub is_valid {
 
 	$state = $self->{_validator}->full_name($value);
 	if($state && ($state ne 'unknown')) {
-		# Given two letter abbreviation
+		# Given two-letter abbreviation
 		return $value;
 	}
 
@@ -87,8 +91,9 @@ sub is_valid {
 
 =head2 value
 
-Sets the raw data which is to be validated.  Called by the superclass, you
-are unlikely to want to call it.
+Sets the raw data to be validated.
+Called by the superclass,
+you are unlikely to want to call it.
 
 =cut
 
@@ -114,17 +119,17 @@ Nigel Horne, C<< <njh at bandsman.co.uk> >>
 
 =head1 BUGS
 
-Only two letter abbreviations are allowable, so 'Mass' won't work for
-Massachusetts.
+Only two-letter abbreviations are allowable,
+so 'Mass' won't work for Massachusetts.
 
 Please report any bugs or feature requests to C<bug-cgi-untaint-csp-us at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=CGI-Untaint-CountyStateProvince>.  I will be notified, and then you'll
-automatically be notified of progress on your bug as I make changes.
-
+the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=CGI-Untaint-CountyStateProvince>.
+I will be notified,
+and then you'll automatically be notified of the progress of your bug as I make changes.
 
 =head1 SEE ALSO
 
-CGI::Untaint::CountyStateProvince, CGI::Untaint
+L<CGI::Untaint::CountyStateProvince>, L<CGI::Untaint>, L<Locale::SubCountry>
 
 =head1 SUPPORT
 
