@@ -3,15 +3,13 @@
 use strict;
 use warnings;
 
-use Test::More;
-
-unless($ENV{RELEASE_TESTING}) {
-    plan( skip_all => "Author tests not required for installation" );
-}
+use Test::DescribeMe qw(author);
+use Test::Most;
 
 eval 'use Test::NoPlan qw / all_plans_ok /';
+
 if($@) {
-	plan skip_all => 'Test::NoPlan required for test verification';
+	plan(skip_all => 'Test::NoPlan required for test verification');
 } else {
 	all_plans_ok();
 }
