@@ -2,6 +2,9 @@ Revision history for CGI-Untaint-CountyStateProvince-US
 
 0.05
 	Added a work around for RT#105917
+	Added t/30-basics.t
+	Use gtar to create a distribution on Macs
+	Use Test::Needs and Test::DescribeMe
 
 0.04	Mon Nov 23 08:38:22 EST 2020
 	Fix http://www.cpantesters.org/cpan/report/a376e91c-b37f-11e7-bcf2-71d4db1c1d4b
